[gd_scene load_steps=37 format=3 uid="uid://cnpt6gh8iiuth"]

[ext_resource type="Script" path="res://Scenes/Entities/Player/player.gd" id="1_6eg4b"]
[ext_resource type="Texture2D" uid="uid://dup7ltjgxap77" path="res://Assets/Sprites/Player/player katana run 48x48.png" id="2_4y5cb"]
[ext_resource type="Script" path="res://Scenes/Entities/Player/playerStateManager.gd" id="3_g6k3l"]
[ext_resource type="Texture2D" uid="uid://cmgwngddsc0fq" path="res://Assets/Sprites/Player_KatanaZERO/spr_player_flip_sheet.png" id="3_r2pdu"]
[ext_resource type="Texture2D" uid="uid://ct4tcw7ahfhhu" path="res://Assets/Sprites/Player_KatanaZERO/spr_fall_sheet.png" id="4_v2b4c"]
[ext_resource type="Texture2D" uid="uid://bmousn2kgog3k" path="res://Assets/Sprites/Player_KatanaZERO/spr_idle_sheet.png" id="5_dgn2s"]
[ext_resource type="Texture2D" uid="uid://bp7eekb81k4c" path="res://Assets/Sprites/Player_KatanaZERO/spr_jump_sheet.png" id="6_8ab30"]
[ext_resource type="Texture2D" uid="uid://chmer1uj2qd7e" path="res://Assets/Sprites/Player/player push 48x48.png" id="6_gyayv"]
[ext_resource type="Texture2D" uid="uid://bbb51rgo58yge" path="res://Assets/Sprites/Player_KatanaZERO/spr_run_sheet.png" id="6_ijrbh"]
[ext_resource type="Script" path="res://Scenes/Entities/Player/camera.gd" id="6_vs0sq"]
[ext_resource type="Texture2D" uid="uid://sqvcw5yh4diq" path="res://Assets/Sprites/Player/player land 48x48.png" id="7_alor0"]
[ext_resource type="Script" path="res://Scenes/Entities/Player/cameraStateManager.gd" id="7_bp4f6"]
[ext_resource type="Script" path="res://Scenes/Entities/Player/CameraStates/followAheadState.gd" id="8_42ndx"]
[ext_resource type="Script" path="res://Scenes/Entities/Player/PlayerStates/idleState.gd" id="9_aremy"]
[ext_resource type="Script" path="res://Scenes/Entities/Player/CameraStates/followSmoothState.gd" id="9_oc82n"]
[ext_resource type="Texture2D" uid="uid://bv0b6t7uicoi4" path="res://Assets/Sprites/Player_KatanaZERO/spr_idle_to_run_sheet.png" id="9_qi05b"]
[ext_resource type="Script" path="res://Scenes/Entities/Player/CameraStates/fixedState.gd" id="10_niohn"]
[ext_resource type="Script" path="res://Scenes/Entities/Player/PlayerStates/jumpState.gd" id="10_t7jme"]
[ext_resource type="Texture2D" uid="uid://ce3tsl11bdnai" path="res://Assets/Sprites/Player_KatanaZERO/spr_run_to_idle_sheet.png" id="11_ilewn"]
[ext_resource type="Script" path="res://Scenes/Entities/Player/PlayerStates/fallState.gd" id="11_qtqcv"]
[ext_resource type="Script" path="res://Scenes/Entities/Player/PlayerStates/moveState.gd" id="12_xn5h5"]
[ext_resource type="Script" path="res://Scenes/Entities/Player/PlayerStates/doubleJumpState.gd" id="13_halct"]
[ext_resource type="Script" path="res://Scenes/Entities/Player/PlayerStates/pushState.gd" id="17_7lql7"]

[sub_resource type="Animation" id="Animation_dnjq2"]
resource_name = "Double_Jump"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_r2pdu")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerAnimations:speed_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}

[sub_resource type="Animation" id="Animation_num4i"]
resource_name = "Fall"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_v2b4c")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerAnimations:speed_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_gb00n"]
resource_name = "Idle"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_dgn2s")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerAnimations:speed_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.997395),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_4fxfp"]
resource_name = "Idle_to_Move"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_qi05b")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerAnimations:speed_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.8]
}

[sub_resource type="Animation" id="Animation_y4f0i"]
resource_name = "Jump"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_8ab30")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerAnimations:speed_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_y5vwv"]
resource_name = "Land"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_alor0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerAnimations:speed_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}

[sub_resource type="Animation" id="Animation_om6su"]
resource_name = "Move"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_ijrbh")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerAnimations:speed_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.3]
}

[sub_resource type="Animation" id="Animation_j1pxk"]
resource_name = "Move_to_Idle"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("11_ilewn")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerAnimations:speed_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.3]
}

[sub_resource type="Animation" id="Animation_njj01"]
resource_name = "Push"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_gyayv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerAnimations:speed_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.8]
}

[sub_resource type="Animation" id="Animation_pgqnl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_4y5cb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerAnimations:speed_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3g4yg"]
_data = {
"Double_Jump": SubResource("Animation_dnjq2"),
"Fall": SubResource("Animation_num4i"),
"Idle": SubResource("Animation_gb00n"),
"Idle_to_Move": SubResource("Animation_4fxfp"),
"Jump": SubResource("Animation_y4f0i"),
"Land": SubResource("Animation_y5vwv"),
"Move": SubResource("Animation_om6su"),
"Move_to_Idle": SubResource("Animation_j1pxk"),
"Push": SubResource("Animation_njj01"),
"RESET": SubResource("Animation_pgqnl")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h61ak"]
size = Vector2(18, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oom5i"]
size = Vector2(20, 15)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_6eg4b")
metadata/_edit_group_ = true

[node name="PlayerSprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_4y5cb")
hframes = 8

[node name="PlayerAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3g4yg")
}
speed_scale = 1.3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_h61ak")

[node name="WallCollisionArea" type="Area2D" parent="."]

[node name="WallCollisionShape2D" type="CollisionShape2D" parent="WallCollisionArea"]
position = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_oom5i")
debug_color = Color(0.607843, 0.541176, 0, 0.419608)

[node name="Label" type="Label" parent="."]
offset_left = -22.0
offset_top = -53.0
offset_right = 18.0
offset_bottom = -30.0
size_flags_horizontal = 4
text = "text"
horizontal_alignment = 1

[node name="Camera" type="Camera2D" parent="."]
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("6_vs0sq")

[node name="CameraStateManager" type="Node" parent="Camera" node_paths=PackedStringArray("init_state")]
script = ExtResource("7_bp4f6")
init_state = NodePath("FollowAhead")

[node name="FollowAhead" type="Node" parent="Camera/CameraStateManager"]
script = ExtResource("8_42ndx")
state_id = 1

[node name="FollowSmooth" type="Node" parent="Camera/CameraStateManager"]
script = ExtResource("9_oc82n")
state_id = 2

[node name="Fixed" type="Node" parent="Camera/CameraStateManager"]
script = ExtResource("10_niohn")

[node name="PlayerStateManager" type="Node" parent="." node_paths=PackedStringArray("init_state")]
script = ExtResource("3_g6k3l")
init_state = NodePath("Fall")

[node name="Idle" type="Node" parent="PlayerStateManager" node_paths=PackedStringArray("fall_state", "jump_state", "move_state", "push_state")]
script = ExtResource("9_aremy")
fall_state = NodePath("../Fall")
jump_state = NodePath("../Jump")
move_state = NodePath("../Move")
push_state = NodePath("../Push")
animation_name = "Idle"

[node name="Jump" type="Node" parent="PlayerStateManager" node_paths=PackedStringArray("fall_state", "idle_state", "move_state", "double_jump_state")]
script = ExtResource("10_t7jme")
fall_state = NodePath("../Fall")
idle_state = NodePath("../Idle")
move_state = NodePath("../Move")
double_jump_state = NodePath("../DoubleJump")
animation_name = "Jump"
state_id = 3

[node name="Fall" type="Node" parent="PlayerStateManager" node_paths=PackedStringArray("idle_state", "move_state", "jump_state", "double_jump_state")]
script = ExtResource("11_qtqcv")
idle_state = NodePath("../Idle")
move_state = NodePath("../Move")
jump_state = NodePath("../Jump")
double_jump_state = NodePath("../DoubleJump")
animation_name = "Fall"
state_id = 2

[node name="Move" type="Node" parent="PlayerStateManager" node_paths=PackedStringArray("fall_state", "idle_state", "jump_state", "push_state")]
script = ExtResource("12_xn5h5")
fall_state = NodePath("../Fall")
idle_state = NodePath("../Idle")
jump_state = NodePath("../Jump")
push_state = NodePath("../Push")
animation_name = "Move"
state_id = 1

[node name="DoubleJump" type="Node" parent="PlayerStateManager" node_paths=PackedStringArray("fall_state", "idle_state", "move_state")]
script = ExtResource("13_halct")
fall_state = NodePath("../Fall")
idle_state = NodePath("../Idle")
move_state = NodePath("../Move")
animation_name = "Double_Jump"
state_id = 4

[node name="Push" type="Node" parent="PlayerStateManager" node_paths=PackedStringArray("fall_state", "idle_state", "jump_state", "move_state")]
script = ExtResource("17_7lql7")
fall_state = NodePath("../Fall")
idle_state = NodePath("../Idle")
jump_state = NodePath("../Jump")
move_state = NodePath("../Move")
animation_name = "Push"
state_id = 5

[node name="Timers" type="Node" parent="."]

[node name="CoyoteTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="Timers"]

[connection signal="body_entered" from="WallCollisionArea" to="." method="_on_wall_collision_area_body_entered"]
[connection signal="body_exited" from="WallCollisionArea" to="." method="_on_wall_collision_area_body_exited"]
[connection signal="timeout" from="Timers/CoyoteTimer" to="PlayerStateManager/Fall" method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="Timers/JumpBufferTimer" to="PlayerStateManager/Fall" method="_on_jump_buffer_timer_timeout"]
